--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,28 +1,40 @@
-global: 
-  scrape_interval: 15s
-  evaluation_interval: 15s
+# my global config
+global:
+  scrape_interval:     15s # By default, scrape targets every 15 seconds.
+  evaluation_interval: 15s # By default, scrape targets every 15 seconds.
+  # scrape_timeout is set to the global default (10s).
+
+  # Attach these labels to any time series or alerts when communicating with
+  # external systems (federation, remote storage, Alertmanager).
   external_labels:
-    monitor: 'codelab-monitor'
+      monitor: 'my-project'
 
-scrape_configs: 
-  - job_name: "prometheus" 
-    scrape_interval: 15s 
-    static_configs: 
-    - targets: ["host.docker.internal:9090"]
+# # Load and evaluate rules in this file every 'evaluation_interval' seconds.
+# rule_files:
+#   - 'alert.rules'
+#   # - "first.rules"
+#   # - "second.rules"
 
-  - job_name: "node" 
-    static_configs: 
-    - targets: ["node-exporter:9100"]
+# # alert
+# alerting:
+#   alertmanagers:
+#   - scheme: http
+#     static_configs:
+#     - targets:
+#       - "alertmanager:9093"
 
-  - job_name: "hvhost01" 
-    scrape_interval: 5s 
+# A scrape configuration containing exactly one endpoint to scrape:
+# Here it's Prometheus itself.
+scrape_configs:
+  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+
+  - job_name: 'prometheus'
+
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+
     static_configs:
-    - targets: ["10.1.149.191:9182"]
-
-  - job_name: 'docker'
+         - targets: ['localhost:9090']
+  - job_name: 'node'
     static_configs:
-      - targets: ["localhost:9323"]
-  
-  - job_name: 'postgres-exporter'
-    static_configs:
-      - targets: ["postgres-exporter:9187"]
+      - targets: ['node-exporter:9100']
